--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -14,6 +14,14 @@
         android:elevation="4dp"
         app:layout_constraintTop_toTopOf="parent">
 
+        <TextView
+            android:id="@+id/username"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/app_name"
+            android:textSize="20sp" />
+
+
         <Button
             android:id="@+id/logoutNavigate"
             style="?attr/materialIconButtonStyle"
