--- a/app/src/main/res/layout/activity_stories_detail.xml
+++ b/app/src/main/res/layout/activity_stories_detail.xml
@@ -1,41 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="20dp">
+    android:layout_height="match_parent"
+    android:padding="16dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/rounded_border"
+        android:gravity="center"
         android:orientation="vertical">
 
-        <androidx.cardview.widget.CardView
+        <ImageView
+            android:id="@+id/story_image"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:layout_gravity="center"
-            android:layout_marginBottom="8dp"
-            app:cardCornerRadius="16dp"
-            app:cardElevation="4dp">
-
-            <ImageView
-                android:id="@+id/story_image"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:contentDescription="@string/image"
-                android:scaleType="centerCrop" />
-
-        </androidx.cardview.widget.CardView>
-
+            android:contentDescription="@string/image"
+            android:scaleType="centerCrop" />
 
         <TextView
             android:id="@+id/story_name"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginTop="16dp"
             android:text="@string/title_detail"
             android:textSize="20sp"
             android:textStyle="bold" />
@@ -44,9 +31,7 @@
             android:id="@+id/story_description"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="25dp"
+            android:layout_marginTop="8dp"
             android:text="@string/title_desc"
             android:textSize="18sp" />
 
