--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -1,25 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="20dp"
     android:layout_marginBottom="8dp"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:background="@drawable/rounded_border"
+    android:orientation="vertical">
 
-
-    <ImageView
-        android:id="@+id/ivStoryLogo"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="200dp"
+        android:layout_gravity="center"
         android:layout_marginBottom="8dp"
-        android:contentDescription="@string/image"
-        android:scaleType="centerCrop" />
+        app:cardCornerRadius="16dp"
+        app:cardElevation="4dp">
+
+        <ImageView
+            android:id="@+id/ivStoryLogo"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="@string/image"
+            android:scaleType="centerCrop" />
+
+    </androidx.cardview.widget.CardView>
+
 
     <TextView
         android:id="@+id/storyTitle"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="4dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="12dp"
         android:text="@string/title_detail"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textSize="20sp"
@@ -29,6 +41,9 @@
         android:id="@+id/storyDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginBottom="30dp"
         android:text="@string/title_desc"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         android:textSize="16sp" />
